# isekai-terminal

./: .gitignore  CLAUDE.md  DESIGN.md  HELPER_PROTOCOL.md  ISEKAI_PIPE_DESIGN.md  ISEKAI_PIPE_MIGRATION.md  ISEKAI_SSH_DESIGN.md  ISEKAI_TUN_DESIGN.md  LICENSE-APACHE  PLAN.md  SSH3_PROTOCOL_NOTES.md  TESTING.md  gradle.properties  settings.gradle.kts
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/.config/: nextest.toml
rust-core/h3-datagram-error/: Cargo.toml
rust-core/h3-datagram-error/src/: lib.rs
rust-core/h3-noq/: Cargo.toml  README.md
rust-core/h3-noq/src/: datagram.rs  lib.rs
rust-core/h3-noq/tests/: smoke.rs
rust-core/h3-qmux/: Cargo.toml
rust-core/h3-qmux/src/: datagram.rs  lib.rs
rust-core/h3-qmux/tests/: smoke.rs
rust-core/isekai-auth/: Cargo.toml
rust-core/isekai-auth/src/: device_flow.rs  env_provider.rs  error.rs  file_provider.rs  lib.rs  oauth.rs  refresh.rs  time.rs
rust-core/isekai-auth/tests/: device_flow_e2e.rs  refresh_e2e.rs
rust-core/isekai-bootstrap/: Cargo.toml
rust-core/isekai-bootstrap-plan/: Cargo.toml
rust-core/isekai-bootstrap-plan/src/: budget.rs  failure.rs  lib.rs  plan.rs
rust-core/isekai-bootstrap/src/: backend.rs  client_candidates.rs  error.rs  lib.rs  openssh.rs  reuse.rs  russh_backend.rs  types.rs
rust-core/isekai-bootstrap/tests/: openssh_e2e.rs  russh_e2e.rs
rust-core/isekai-fs-guard/: Cargo.toml
rust-core/isekai-fs-guard/src/: file_lock.rs  identity_file.rs  lib.rs  windows_acl.rs
rust-core/isekai-helper/: Cargo.toml
rust-core/isekai-helper/src/: lib.rs  main.rs  plain_socket.rs  resume.rs
rust-core/isekai-helper/tests/: e2e.rs
rust-core/isekai-link-masque/: Cargo.toml
rust-core/isekai-link-masque/src/: addr_codec.rs  capsule.rs  datagram_codec.rs  lib.rs  relay_client.rs  varint.rs
rust-core/isekai-link-masque/tests/: relay_e2e.rs  relay_e2e_qmux.rs
rust-core/isekai-netmon/: Cargo.toml
rust-core/isekai-netmon/src/: lib.rs  linux.rs  macos.rs  windows.rs
rust-core/isekai-pipe/: Cargo.toml
rust-core/isekai-pipe-core/: Cargo.toml
rust-core/isekai-pipe-core/src/: candidate.rs  ctl_gc.rs  ctl_socket.rs  lib.rs  outcome.rs  port_range.rs  profile.rs
rust-core/isekai-pipe-protocol/: Cargo.toml
rust-core/isekai-pipe-protocol/src/: lib.rs
rust-core/isekai-pipe/src/: connect.rs  ctl.rs  ctl_file.rs  inspect.rs  main.rs  probe.rs  resume_loop.rs
rust-core/isekai-pipe/tests/: connect_cross_family_fallback_e2e.rs  connect_stun_fallback_e2e.rs  fencing_e2e.rs  probe_e2e.rs  serve_e2e.rs  stale_trust_signal_e2e.rs  stdout_purity.rs
rust-core/isekai-protocol/: Cargo.toml
rust-core/isekai-protocol/src/: attach.rs  bootstrap.rs  bootstrap_request.rs  ctl.rs  ctl_vars.rs  error.rs  handshake.rs  hello.rs  lib.rs  offset.rs  resume.rs  session_id.rs  version.rs
rust-core/isekai-release-verify/: Cargo.toml
rust-core/isekai-release-verify/src/: keys.rs  lib.rs  manifest.rs  verify.rs
rust-core/isekai-ssh/: Cargo.toml  README.md
rust-core/isekai-ssh/src/: build_exec.rs  build_profile.rs  build_profile_cli.rs  cli.rs  connect.rs  ctl_forward.rs  doctor.rs  helper_download.rs  init.rs  log_file.rs  login.rs  main.rs  resume.rs  time_fmt.rs  wrapper.rs
rust-core/isekai-ssh/tests/: build_result_push_e2e.rs  connect_e2e.rs  ctl_socket_forward_e2e.rs  doctor_e2e.rs  help_purity.rs  init_e2e.rs  init_manifest_verification_e2e.rs  log_file_e2e.rs  login_e2e.rs  mux_holder_windows_e2e.rs  real_sshd_bootstrap_e2e.rs  real_sshd_multihop_bootstrap_e2e.rs  resume_multi_disconnect_e2e.rs  resume_reconnect_e2e.rs  resume_window_exceeded_e2e.rs  stdout_cleanliness.rs  stun_mode_e2e.rs  trust_store_e2e.rs  wrapper_auto_bootstrap_e2e.rs  wrapper_auto_download_relay_bootstrap_e2e.rs  wrapper_stale_trust_auto_recovery_e2e.rs  wrapper_stdout_cleanliness.rs
rust-core/isekai-stun/: Cargo.toml
rust-core/isekai-stun/src/: lib.rs
rust-core/isekai-transport/: Cargo.toml
rust-core/isekai-transport/src/: attempt.rs  backoff.rs  candidate.rs  candidate_pool.rs  candidate_provider.rs  dual_path.rs  error.rs  generation_coordinator.rs  lib.rs  multipath.rs  path_health.rs  path_health_fsm.rs  physical_interface.rs  proof.rs  qmux_relay.rs  race.rs  relay.rs  resume.rs  stun_p2p.rs  system.rs  telemetry.rs  traits.rs  types.rs  warm_standby.rs
rust-core/isekai-transport/tests/: multipath_datagram_e2e.rs  multipath_e2e.rs  qmux_relay_e2e.rs  race_e2e.rs  rebind_e2e.rs  relay_e2e.rs  relay_fallback_e2e.rs  resume_e2e.rs  stun_p2p_e2e.rs  stun_p2p_fallback_e2e.rs
rust-core/isekai-trust/: Cargo.toml
rust-core/isekai-trust/src/: error.rs  host_key_verifier.rs  lib.rs  normalize.rs  schema.rs  store.rs
rust-core/local-ipc-mux/: Cargo.toml  README.md
rust-core/local-ipc-mux/src/: framing.rs  in_memory.rs  lib.rs  pipe_classify.rs  windows_named_pipe.rs
rust-core/noq-multipath-spike/: Cargo.toml
rust-core/noq-multipath-spike/src/: jni_bridge.rs  (+2 more)
rust-core/openssh-config/: Cargo.toml  README.md
rust-core/quicmux/: Cargo.toml
rust-core/quicsock/: Cargo.toml  LICENSE-MIT  README.md
rust-core/quicsock-noq/: Cargo.toml
rust-core/russh-stream-session/: Cargo.toml  README.md
rust-core/scripts/: android-arm64-ar.sh  android-arm64-clang.sh  build-ios-xcframework.sh  build-isekai-helper-musl.sh  build-isekai-pipe-musl.sh  build-isekai-ssh-musl.sh  build-linux-swift-ffi.sh  generate-swift-bindings.sh  ndk-common.sh  phase7-5-roaming-test.sh
rust-core/src/: agent_forward.rs  android_quic_endpoint.rs  debug_fault.rs  faulty_stream.rs  faulty_udp_socket.rs  file_preview.rs  helper_bootstrap.rs  helper_quic_transport.rs  isekai_link_relay_transport.rs  isekai_pipe_quic_transport.rs  isekai_stun_p2p_transport.rs  kitty_graphics.rs  lib.rs  multipath_transport.rs  net_health_policy.rs  orchestrator.rs  pool.rs  quic_transport.rs  reattach_persistence.rs  rebind_driver.rs  rebind_manager.rs  rebind_ports.rs  resume_client.rs  session.rs  session_state.rs  session_supervisor.rs  sixel.rs  socks.rs  terminal.rs  theme.rs  tls_verify.rs  transport.rs  trzsz.rs
rust-core/tsshd/: Cargo.toml
(+562 files in other folders)
