[workspace]
members = [".", "uniffi-bindgen", "isekai-helper", "noq-multipath-spike"]
resolver = "2"

[package]
name = "tssh-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "tssh_core"
crate-type = ["cdylib", "staticlib"]

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["test-util"] }

[dependencies]
rand = "0.8"
uniffi = { version = "0.31", features = ["tokio"] }
timed-fsm = "0.3.0"
russh = "0.48"
russh-keys = "0.48"
tokio = { version = "1", features = ["full"] }
log = "0.4"
parking_lot = "0.12"
smol_str = "0.2"
thiserror = "2.0.18"
async-trait = "0.1.89"
vte = "0.13"
unicode-width = "0.1"
base64 = "0.22"
flate2 = "1"
md5 = "0.8"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
# Phase 9-2: multipath_transport.rs（Tailscale⇔直接アドレスの受動フェイルオーバー）専用。
# 既存の helper_quic_transport.rs（Phase 7/8）は quinn のまま無変更
# （Phase 9-0/9-1 でquinnクライアント⇔noqサーバーの後方互換を実証済み）。
noq = { version = "1.0.1", features = ["rustls", "ring"] }
tokio-stream = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
panic = "abort"

