[workspace]
members = [".", "uniffi-bindgen", "noq-multipath-spike", "h3-noq", "isekai-link-masque", "isekai-stun", "isekai-protocol", "isekai-fs-guard", "isekai-trust", "isekai-auth", "isekai-transport", "isekai-bootstrap", "isekai-ssh", "isekai-pipe-protocol", "isekai-pipe-core", "isekai-pipe"]
resolver = "2"

[package]
name = "isekai-terminal-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "isekai_terminal_core"
crate-type = ["cdylib", "staticlib"]

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["test-util"] }

[dependencies]
rand = "0.8"
uniffi = { version = "0.31", features = ["tokio"] }
timed-fsm = "0.3.0"
russh = "0.48"
russh-keys = "0.48"
tokio = { version = "1", features = ["full"] }
log = "0.4"
parking_lot = "0.12"
smol_str = "0.2"
thiserror = "2.0.18"
async-trait = "0.1.89"
vte = "0.13"
unicode-width = "0.1"
base64 = "0.22"
flate2 = "1"
md5 = "0.8"
# タスク#65: パスワード・復号済み秘密鍵PEMをdrop時にゼロ化するために使う
# (`SshAuth`のDrop実装、`src/lib.rs`参照)。
zeroize = "1"
# QUIC実装は noq（quinnのマルチパスフォーク）に一本化している。
# helper_quic_transport.rs（Phase 7/8、単一パス）・quic_transport.rs（Phase 5B）・
# resume_client.rs も含め、quinn は使っていない
# （Phase 9-0/9-1 でquinnクライアント⇔noqサーバーの後方互換を実証済みなので、
# noqは単一パス用途でも quinn と相互接続可能）。
noq = { version = "1.0.1", features = ["rustls", "ring"] }
tokio-stream = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
isekai-stun = { path = "isekai-stun" }
# Phase S-0f: HELLO/proof/ACK・handshake JSON の型は isekai-protocol (pure crate)
# を SSOT にする。ISEKAI_SSH_DESIGN.md「共有ロジックの crate 分割」参照。
isekai-protocol = { path = "isekai-protocol" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
panic = "abort"
