[package]
name = "h3-qmux"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "QUIC transport implementation for h3 based on qmux (draft-ietf-quic-qmux)."
keywords = ["http3", "quic", "h3", "qmux"]
categories = ["network-programming", "web-programming"]

[dependencies]
h3 = { git = "https://github.com/hyperium/h3", rev = "385da3ad93407ec8eed15172f63561f6fb2bca40" }
h3-datagram = { git = "https://github.com/hyperium/h3", rev = "385da3ad93407ec8eed15172f63561f6fb2bca40", optional = true }
bytes = "1"
# crates.io's published qmux (0.3.1) predates real RFC 9221 datagram support
# (added moq-dev/web-transport@04595dd6..f6107797, 2026-07-03..07-06, not yet
# released to crates.io) — pinned to that commit instead. `web-transport-trait`
# is versioned in the same monorepo/workspace, pinned to the same rev to avoid
# an API mismatch between the two.
qmux = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3" }
web-transport-trait = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3" }
tokio-util = { version = "0.7.9" }
futures-util = { version = "0.3.28", default-features = false }
tracing = { version = "0.1.40", optional = true }

[features]
tracing = ["dep:tracing"]
datagram = ["dep:h3-datagram"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
http = "1"
h3-datagram = { git = "https://github.com/hyperium/h3", rev = "385da3ad93407ec8eed15172f63561f6fb2bca40" }
