[package]
name = "isekai-auth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
# Used for atomic writes (write to a sibling temp file, then rename) in
# file_provider.rs, mirroring isekai-trust/src/store.rs. Also reused by
# tests as a scratch directory factory.
tempfile = "3"
