[package]
name = "isekai-bootstrap-plan"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
isekai-bootstrap = { path = "../isekai-bootstrap" }
russh-stream-session = { path = "../russh-stream-session" }
thiserror = "2.0.18"

[dev-dependencies]
isekai-protocol = { path = "../isekai-protocol" }
