[package]
name = "isekai-bootstrap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
isekai-protocol = { path = "../isekai-protocol" }
isekai-stun = { path = "../isekai-stun" }
isekai-fs-guard = { path = "../isekai-fs-guard" }
isekai-trust = { path = "../isekai-trust" }
openssh-config = { path = "../openssh-config" }
russh-stream-session = { path = "../russh-stream-session" }
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1.89"
tokio = { version = "1", features = ["process", "io-util", "net", "rt", "sync", "time", "macros"] }
base64 = "0.22"
thiserror = "2.0.18"
log = "0.4"
rand = "0.8"
serde_json = "1"
sha2 = "0.10"

[[bin]]
# Real-ELF stand-in for `isekai-pipe serve`, used only by
# `tests/openssh_e2e.rs`'s helper-reuse tests (see its own doc comment for
# why a real executable is needed there instead of the plain shell-script
# stand-in every other test in that file uses). `cargo test -p
# isekai-bootstrap` builds this automatically and exposes its path to
# `tests/openssh_e2e.rs` via `CARGO_BIN_EXE_isekai-bootstrap-fake-pipe`.
name = "isekai-bootstrap-fake-pipe"
path = "src/bin/fake_pipe.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1.89"
tempfile = "3"
