[package]
name = "isekai-fs-guard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

[target.'cfg(windows)'.dependencies]
# ACL enforcement for check_not_world_writable/set_private_file_permissions
# (windows_acl.rs). Same crate+version isekai-netmon/quicsock already use for
# their own Win32 API access.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
