[package]
name = "isekai-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "isekai-helper"
path = "src/main.rs"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"
rand = "0.8"
