[package]
name = "isekai-helper"
version = "0.3.4"
edition = "2021"

[[bin]]
name = "isekai-helper"
path = "src/main.rs"

[dependencies]
# Phase 9-1: quinn から noq（quinnのmultipathフォーク）へ移行。既存クライアント
# （quinnベース、Phase 7/8）はopen_path()を呼ばず後方互換のまま動く
# （Phase 9-0 の compat_check.rs で実証済み）。
noq = { version = "1.0.1", features = ["rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"
rand = "0.8"
isekai-stun = { path = "../isekai-stun" }
isekai-link-masque = { path = "../isekai-link-masque" }

[dev-dependencies]
# e2e.rs は本番クライアント（helper_quic_transport.rs、quinnのまま無変更）と
# 同じ形の quinn クライアントでこのサーバーをテストする。これは Phase 9-1 の
# 後方互換前提（既存 quinn クライアントが noq サーバーに接続できる）そのものの
# 回帰確認になる。
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
