[package]
name = "isekai-pipe-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library skeleton for the future isekai-pipe data plane."

[dependencies]
isekai-pipe-protocol = { path = "../isekai-pipe-protocol" }
# Migration path from the legacy `known_helpers.toml` trust store
# (`isekai_trust::schema::{TrustStore, HelperTrust}`) to the persistent
# profile schema (`chatgpt.md` §13) -- see `profile.rs`.
isekai-trust = { path = "../isekai-trust" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
