[package]
name = "isekai-pipe-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library skeleton for the future isekai-pipe data plane."

[dependencies]
isekai-pipe-protocol = { path = "../isekai-pipe-protocol" }
# Candidateモデルのpure値型(CandidateDraft/CandidateDraftBatch等)は
# isekai-transport側に移設した(`#31`、UAV OSS企画でisekai-transportを
# 独立して切り出す際にこのcrateのSSH固有コード[デプロイ済みプロファイル
# キャッシュ・ブートストラップ方針]を道連れにしないため)。一方向依存
# (isekai-transportはisekai-pipe-coreに依存しない)。
isekai-transport = { path = "../isekai-transport" }
# Migration path from the legacy `known_helpers.toml` trust store
# (`isekai_trust::schema::{TrustStore, HelperTrust}`) to the persistent
# profile schema (`chatgpt.md` §13) -- see `profile.rs`.
isekai-trust = { path = "../isekai-trust" }
# Private file/dir permissions for `write_persistent_profile` (session
# secrets, cert pins) -- same guard `isekai-trust`/`isekai-auth` use for
# their own on-disk secrets.
isekai-fs-guard = { path = "../isekai-fs-guard" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# ProfileLock's Windows backend (LockFileEx). Same crate+version
# isekai-fs-guard/isekai-netmon/quicsock already use.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3"
