[package]
name = "isekai-pipe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI skeleton for isekai-pipe connect/serve/probe/inspect."

[[bin]]
name = "isekai-pipe"
path = "src/main.rs"

[dependencies]
isekai-pipe-core = { path = "../isekai-pipe-core" }
isekai-helper = { path = "../isekai-helper" }
isekai-transport = { path = "../isekai-transport" }
isekai-trust = { path = "../isekai-trust" }
anyhow = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
