[package]
name = "isekai-pipe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "isekai-pipe: connect (client) and serve (server) data plane for isekai-ssh."

[[bin]]
name = "isekai-pipe"
path = "src/main.rs"

[dependencies]
isekai-pipe-core = { path = "../isekai-pipe-core" }
isekai-protocol = { path = "../isekai-protocol" }
isekai-transport = { path = "../isekai-transport" }
isekai-trust = { path = "../isekai-trust" }
# `engine` module (formerly the standalone `isekai-helper` crate,
# `ISEKAI_PIPE_MIGRATION.md` P5): the `serve` engine noq/rustls stack.
noq = { version = "1.0.1", features = ["rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
rand = "0.8"
isekai-stun = { path = "../isekai-stun" }
isekai-link-masque = { path = "../isekai-link-masque" }
isekai-netmon = { path = "../isekai-netmon" }
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
async-trait = "0.1.89"
# e2e tests exercise this crate's `serve` engine with the same quinn-based
# client `isekai-helper`'s own e2e tests used (Phase 9-1's noq/quinn
# backward-compat guarantee).
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
