[package]
name = "isekai-pipe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "isekai-pipe: connect (client) and serve (server) data plane for isekai-ssh."

[[bin]]
name = "isekai-pipe"
path = "src/main.rs"

[dependencies]
isekai-pipe-core = { path = "../isekai-pipe-core" }
isekai-protocol = { path = "../isekai-protocol" }
# `qmux-relay`: isekai-pipe already unconditionally depends on
# `isekai-link-masque`, which itself unconditionally needs `h3-qmux`/`qmux`
# (`#qmux-leg2`), so enabling this here (`#qmux-leg1`, isekai-pipe connect's
# own client-side relay dial) adds no new dependency weight — opt-in happens
# via `isekai-pipe connect --relay-transport qmux`, not a Cargo feature flag.
isekai-transport = { path = "../isekai-transport", features = ["qmux-relay"] }
isekai-trust = { path = "../isekai-trust" }
# `engine` module (formerly the standalone `isekai-helper` crate,
# `ISEKAI_PIPE_MIGRATION.md` P5): the `serve` engine's transport is
# `quicmux`'s noq-backed listener API (Stage A quicmux-server-resume
# migration) — no direct `noq` dependency any more, matching the point of
# extracting `quicmux` in the first place (see that crate's docs).
quicmux = { path = "../quicmux", features = ["noq"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = "0.13"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
rand = "0.8"
isekai-stun = { path = "../isekai-stun" }
isekai-link-masque = { path = "../isekai-link-masque" }
isekai-netmon = { path = "../isekai-netmon" }
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
# `datagram_relay.rs`'s channel-id-prefixed datagram framing and
# `AnyMuxConnection::send_datagram`/`recv_datagram` both traffic in
# `bytes::Bytes` directly (matching quicmux's own datagram API shape).
bytes = "1"
# OS-level (Windows toast / Linux desktop / macOS) notification for the two
# "user should notice this even if not looking at the terminal" reconnect
# events (`resume_loop.rs::notify_os`) — a lightweight stand-in for a full
# tssh-style in-terminal overlay, which is a separate, larger follow-up.
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1.89"
# `sleep_with_live_status`のタイミングを`tokio::time::pause()`/`advance()`で
# 実時間を待たずに決定的にテストするため(`[dependencies]`の`tokio`とは
# feature unificationで1つのtokioクレートにまとまる)。
tokio = { version = "1", features = ["test-util"] }
# e2e tests exercise this crate's `serve` engine with the same quinn-based
# client `isekai-helper`'s own e2e tests used (Phase 9-1's noq/quinn
# backward-compat guarantee).
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
