[package]
name = "isekai-ssh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Single static-binary ssh(1) ProxyCommand wrapper reusing isekai-terminal's isekai-helper QUIC connection resilience (ISEKAI_SSH_DESIGN.md)."

[[bin]]
name = "isekai-ssh"
path = "src/main.rs"

[dependencies]
isekai-trust = { path = "../isekai-trust" }
isekai-bootstrap = { path = "../isekai-bootstrap" }
isekai-bootstrap-plan = { path = "../isekai-bootstrap-plan" }
isekai-auth = { path = "../isekai-auth" }
isekai-pipe-core = { path = "../isekai-pipe-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "signal"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
anyhow = "1"
sha2 = "0.10"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
isekai-protocol = { path = "../isekai-protocol" }
russh = "0.48"
russh-keys = "0.48"
async-trait = "0.1.89"
tempfile = "3"
