[package]
name = "isekai-ssh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Single static-binary ssh(1) ProxyCommand wrapper reusing isekai-terminal's isekai-helper QUIC connection resilience (ISEKAI_SSH_DESIGN.md)."

[[bin]]
name = "isekai-ssh"
path = "src/main.rs"

[[bin]]
name = "isekai-key-debug"
path = "src/bin/key-debug.rs"

[dependencies]
isekai-fs-guard = { path = "../isekai-fs-guard" }
isekai-trust = { path = "../isekai-trust" }
isekai-bootstrap = { path = "../isekai-bootstrap" }
isekai-bootstrap-plan = { path = "../isekai-bootstrap-plan" }
isekai-auth = { path = "../isekai-auth" }
isekai-pipe-core = { path = "../isekai-pipe-core" }
isekai-protocol = { path = "../isekai-protocol" }
russh-stream-session = { path = "../russh-stream-session" }
openssh-config = { path = "../openssh-config" }
local-ipc-mux = { path = "../local-ipc-mux" }
russh = "0.48"
russh-keys = "0.48"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "signal", "net", "process"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
anyhow = "1"
sha2 = "0.10"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "3"
rand = "0.8"
async-trait = "0.1.89"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
# Only for native/agent_auth.rs's FakeMultiKeySigner test double, which
# needs to produce a real SSH signature blob (same versions russh-keys' own
# ssh-key dependency pins — see russh-stream-session/Cargo.toml's identical
# comment, this mirrors that).
ssh-encoding = "0.2"
signature = "2"
