[package]
name = "isekai-transport"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
isekai-protocol = { path = "../isekai-protocol" }
# Candidateモデルのpure値型(CandidateDraft/CandidateDraftBatch等)とConnectionIntent。
# isekai-pipe-coreはisekai-transportに依存しない一方向の依存(circularではない)。
isekai-pipe-core = { path = "../isekai-pipe-core" }
# STUN観測アドレス取得（`isekai_stun_p2p_transport.rs`相当の移植、
# ISEKAI_SSH_DESIGN.md フェーズS-0d-2）。isekai-terminal-core・isekai-helperと共用のpure crate。
isekai-stun = { path = "../isekai-stun" }
async-trait = "0.1.89"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }
# QUIC実装は isekai-terminal-core と同じく noq（quinnのマルチパスフォーク）に一本化する。
# `FaultyUdpSocket`等のAndroid専用型・UniFFIはこのcrateからは一切参照しない
# （ISEKAI_SSH_DESIGN.md「FaultyUdpSocket（Android専用フォルト注入ソケット）の扱い」節）。
noq = { version = "1.0.1", features = ["rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# `qmux-relay`(既定OFF、opt-in): UDP遮断環境向けのQMux-over-TLS-over-TCP経路
# (`qmux_relay.rs`)。crates.io版qmux(0.3.1)はRFC 9221 datagram対応前の
# スナップショットなので、`h3-qmux`/`isekai-link-masque`と同じcommitへgit pin
# する(このcrateのleg 1はdatagramを使わないが、バージョン不整合を避けるため
# 揃える)。qmux crateのpre-1.0な破壊的変更リスクをopt-inの外へ隔離するため
# feature gate している。
qmux = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3", optional = true }
web-transport-trait = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
hmac = "0.12"
sha2 = "0.10"
thiserror = "2.0.18"
log = "0.4"
# BackoffPolicyのジッター計算（呼び出し元がRNGを渡す設計、purityを保つ）。
rand = "0.8"
# 物理インタフェース列挙・束縛(physical_interface.rs、QuicEndpointRebinder::
# rebind_socketのCLI/PC側実装)。`discovery` featureでnetdev経由のインタフェース
# 列挙(`quicsock::discovery`)も使う。
# quicsock-noq(ソケットfan-out)は依存に含めない — それが要るのは同一QUIC接続で
# 複数の物理インタフェースを同時保持する方式(noq issue #738で断念済み、
# path_health.rs/multipath.rsのdoc参照)だけで、今回採用したrebind方式には不要。
quicsock = { path = "../quicsock", features = ["discovery"] }
# `noq::Connection::path_events()`のStream実装をpollするために使う
# (multipath.rs、isekai-terminal-coreのmultipath_transport.rsと同じ用途)。
tokio-stream = "0.1"

[features]
qmux-relay = ["dep:qmux", "dep:web-transport-trait", "dep:tokio-rustls"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rcgen = "0.13"
env_logger = "0.11"
