[package]
name = "isekai-transport"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
isekai-protocol = { path = "../isekai-protocol" }
# Candidateモデルのpure値型(CandidateDraft/CandidateDraftBatch等)とConnectionIntent。
# isekai-pipe-coreはisekai-transportに依存しない一方向の依存(circularではない)。
isekai-pipe-core = { path = "../isekai-pipe-core" }
# STUN観測アドレス取得（`isekai_stun_p2p_transport.rs`相当の移植、
# ISEKAI_SSH_DESIGN.md フェーズS-0d-2）。isekai-terminal-core・isekai-helperと共用のpure crate。
isekai-stun = { path = "../isekai-stun" }
# 接続確立(dial)・stream I/O・cert pinning・ALPN/exporter-label/tuning設定の
# backend抽象(noq/qmux)は`quicmux`crateに一本化した(元`traits.rs`/`system.rs`/
# `qmux_relay.rs`)。ATTACH v2ハンドシェイク・resume・fencingといったisekai固有
# ロジックはこのcrateに残る。`quicmux`はisekai-protocol/isekai-transportに一切
# 依存しないleaf crateなので、この一方向依存は循環しない。
quicmux = { path = "../quicmux", features = ["noq"] }
async-trait = "0.1.89"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }
# `multipath.rs`/`path_health.rs`はnoq-concreteなまま残す設計判断
# (noq issue #738、同モジュールのdoc参照)なので、`noq`はこのcrate自身の
# 直接依存としても残す。`FaultyUdpSocket`等のAndroid専用型・UniFFIはこの
# crateからは一切参照しない
# （ISEKAI_SSH_DESIGN.md「FaultyUdpSocket（Android専用フォルト注入ソケット）の扱い」節）。
noq = { version = "1.0.1", features = ["rustls", "ring"] }
# `qmux-relay`(既定OFF、opt-in): UDP遮断環境向けのQMux-over-TLS-over-TCP経路。
# backend実装自体は`quicmux`の`qmux`featureへ移動したので本体コード
# (`src/`)からはこの3つを直接importしなくなったが、`tests/qmux_relay_e2e.rs`
# 自体はATTACH v2サーバー側を素の`qmux::Session`で自作しており(実際の
# `isekai-pipe serve`相当の応答側が無いテストのため)、そちら側の直接依存として
# 引き続き必要。qmux crateのpre-1.0な破壊的変更リスクをopt-inの外へ隔離する
# ため、このcrate自身でもfeature gateしている(`quicmux/qmux`と同じ理由)。
qmux = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3", optional = true }
web-transport-trait = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
hmac = "0.12"
sha2 = "0.10"
thiserror = "2.0.18"
log = "0.4"
# BackoffPolicyのジッター計算（呼び出し元がRNGを渡す設計、purityを保つ）。
rand = "0.8"
# 物理インタフェース列挙・束縛(physical_interface.rs、QuicEndpointRebinder::
# rebind_socketのCLI/PC側実装)。`discovery` featureでnetdev経由のインタフェース
# 列挙(`quicsock::discovery`)も使う。
# quicsock-noq(ソケットfan-out)は依存に含めない — それが要るのは同一QUIC接続で
# 複数の物理インタフェースを同時保持する方式(noq issue #738で断念済み、
# path_health.rs/multipath.rsのdoc参照)だけで、今回採用したrebind方式には不要。
quicsock = { path = "../quicsock", features = ["discovery"] }
# `noq::Connection::path_events()`のStream実装をpollするために使う
# (multipath.rs、isekai-terminal-coreのmultipath_transport.rsと同じ用途)。
tokio-stream = "0.1"

[features]
qmux-relay = ["quicmux/qmux", "dep:qmux", "dep:web-transport-trait", "dep:tokio-rustls"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rcgen = "0.13"
env_logger = "0.11"
# テスト自体がTLS server設定を組み立てるために直接使う(元々は`system.rs`/
# `qmux_relay.rs`経由の間接依存だったが、両方とも`quicmux`へ移動したため
# このcrateの本体コードはrustlsを直接importしなくなった)。sha2は既存の
# `[dependencies]`エントリ(`proof.rs`/`candidate_pool.rs`等が使用)がテストにも
# そのまま見えるので、ここで別途宣言する必要はない。
rustls = { version = "0.23", default-features = false, features = ["ring"] }
