[package]
name = "isekai-trust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2.0.18"
# Used for atomic writes (write to a sibling temp file, then rename) in
# store.rs. Also reused by tests as a scratch directory factory.
tempfile = "3"
